corrected spelling mistakes

--- a/capstone-proposal/Capstone-Proposal.tex
+++ b/capstone-proposal/Capstone-Proposal.tex
@@ -88,7 +88,7 @@ Assuming Alphabet Inc. was a US equity stock covered in our investment universe 
 \section{Solution Statement}
 Given the above data source appropriate quantiative metrics will be selected to form the state space for the Q-Learning algorithm\cite{sutton1998}. Generally, Q-Learning is a model-free reinforcement learning algorithm which allows to realise delayed rewards and find optimal policies for selecting an action out of a universe of possible actions (e.g. buy vs. sell). This notion of a \lq delayed reward\rq ~is much in contrast to traditional quantitative methods of investing where models are based on an ex-ante prediction of future asset prices.
 \\\\
-More formally, the Q-Learning algorithm is based on a finite Markov Decision Process and maximises total reward. A reward is achieved by transitioning form a given state $S_t$ to $S_{t+1}$ by taking an action $a_t$. By specifying an appropriate reward function that rewards desired and penalises undesired behaviour the algorithm will learn a policy of behaviour. The speed of learning can be calibrated using an $\alpha$ parameter.
+More formally, the Q-Learning algorithm is based on a finite Markov Decision Process and maximises total reward. A reward is achieved by transitioning from a given state $S_t$ to $S_{t+1}$ by taking an action $a_t$. By specifying an appropriate reward function that rewards desired and penalises undesired behaviour the algorithm will learn a policy of behaviour. The speed of learning can be calibrated using an $\alpha$ parameter.
 
 \begin{equation}
 	Q(s_{t},a_{t}) \leftarrow \underbrace{Q(s_{t},a_{t})}_{\rm old~value} + \underbrace{\alpha}_{\rm learning~rate} \cdot \left( \overbrace{\underbrace{r_{t+1}}_{\rm reward} + \underbrace{\gamma}_{\rm discount~factor} \cdot \underbrace{\max_{a}Q(s_{t+1}, a)}_{\rm estimate~of~optimal~future~value}}^{\rm learned~value} - \underbrace{Q(s_{t},a_{t})}_{\rm old~value} \right)
