corrected spelling mistakes

--- a/capstone-proposal/Capstone-Proposal.tex
+++ b/capstone-proposal/Capstone-Proposal.tex
@@ -130,7 +130,7 @@ A suitable candidate for a reward function is the \emph{Sharpe Ratio}, the indus
 Here $r_i$ is the return of asset $i$, $r_f$ is the risk free rate and $\sigma_i$ is the standard deviation of the asset's return.
 
 \section{Benchmark Model}
-To evaluate the performance the actions carried out by the agent will be benchmarked against the return of a representative stock index. Given that the learner for the purpose of this project will be based on US stocks the S\&P 500 index will be used as a benchmark.
+To evaluate the performance of the actions carried out by the agent will be benchmarked against the return of a representative stock index. Given that the learner for the purpose of this project will be based on US stocks the S\&P 500 index will be used as a benchmark.
 
 \section{Evaluation Metrics}
 To ensure the outcome of the learner is compared apples to apples a risk adjusted measure will be used to quantify the risk adjusted return of both benchmark index and our stock portfolio. The \emph{Sharpe Ratio} (see above) will be used as the first metric. Additionally, a metric commonly used in active investment is the \emph{Information Ratio} which measures how much  \textbf{active} return is generated per unit of \textbf{active} risk (both compared to the benchmark), compared to the \emph{Sharpe Ratio} which compares against the risk free rate and pure standard deviation. 
